2015-03-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj: 

2015-02-11  Holger Seelig  <holger.seelig@yahoo.de>

	* pb1.x3dv: 

2015-02-02  Holger Seelig  <holger.seelig@yahoo.de>

	* pb1.x3dv:
	* WorldProto.wrl: 

2015-01-31  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv:
	* pb1.x3dv: 

2015-01-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* pb.x3dv:
	* pb1.x3dv:
	* sphere.wrl:
	* button.wrl:
	* solaris.htm:
	* emitter.wrl:
	* emitter2.wrl:
	* WorldProto.wrl:
	* util-mark6.png:
	* sphere-blue.wrl:
	* XSliderProto.wrl:
	* ParticleProto.wrl:
	* ConstantsProto.wrl:
	* ComposeVec3fProto.wrl:
	* ParticleEmitterProto.wrl:
	* CollisionManagerProto.wrl:
	* TrackingViewpointProto.wrl: 

2015-01-28  Holger Seelig  <holger.seelig@yahoo.de>

	* pb1.x3dv: 

2015-01-28  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv:
	* Felulet.wrl:
	* Script-vrmlscript1.wrl: 

2015-01-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.wrl:
	* Fields.x3d:
	* pb1.x3dv:
	* Fields2.wrl:
	* Script-vrmlscript1.wrl:
	* DigitalClock_proto.wrl: 

2015-01-25  Holger Seelig  <holger.seelig@yahoo.de>

	* pb1.x3dv: 

2015-01-24  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2015-01-24  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv:
	* Felulet.wrl: 

2015-01-23  Holger Seelig  <holger.seelig@yahoo.de>

	* pb1.x3dv: 

2015-01-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Simple.wrl:
	* Particle.wrl: 

2015-01-22  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv:
	* pb1.x3dv: 

2015-01-17  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv:
	* Felulet.wrl:
	* pb1.x3dv: 

2015-01-14  Holger Seelig  <holger.seelig@yahoo.de>

	* pb1.x3dv: 

2015-01-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* pb.x3dv:
	* pb1.x3dv: 

2015-01-13  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2015-01-12  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2015-01-12  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 
