@@ -1,4 +1,4 @@
-#VRML V2.0 utf8 Titania V0.7.6
+#VRML V2.0 utf8 Titania V0.7.8
 
 PROTO Particle [
   exposedField SFBool     enabled TRUE
