@@ -1,18 +1,26 @@
 ﻿<Properties>
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Release" />
-  <MonoDevelop.Ide.Workbench ActiveDocument="libtitania-x3d/Titania/X3D/Browser/PointingDeviceSensor/PointingDevice.cpp">
+  <MonoDevelop.Ide.Workbench>
     <Files>
-      <File FileName="libtitania-x3d/Titania/X3D/Browser/PointingDeviceSensor/X3DPointingDeviceSensorContext.h" Line="77" Column="14" />
+      <File FileName="libtitania-x3d/Titania/X3D/Browser/PointingDeviceSensor/X3DPointingDeviceSensorContext.h" Line="1" Column="1" />
       <File FileName="libtitania-x3d/Titania/X3D/Browser/PointingDeviceSensor/X3DPointingDeviceSensorContext.cpp" Line="1" Column="1" />
-      <File FileName="libtitania-x3d/Titania/X3D/Browser/PointingDeviceSensor/PointingDevice.cpp" Line="151" Column="79" />
+      <File FileName="libtitania-x3d/Titania/X3D/Browser/PointingDeviceSensor/PointingDevice.cpp" Line="141" Column="19" />
       <File FileName="libtitania-x3d/Titania/X3D/Browser/Navigation/ExamineViewer.cpp" Line="1" Column="1" />
       <File FileName="libtitania-x3d/Titania/X3D/Browser/Navigation/X3DFlyViewer.cpp" Line="1" Column="1" />
       <File FileName="libtitania-x3d/Titania/X3D/Browser/Navigation/LookAtViewer.cpp" Line="1" Column="1" />
       <File FileName="libtitania-x3d/Titania/X3D/Browser/Navigation/PlaneViewer.cpp" Line="1" Column="1" />
+      <File FileName="Titania/Titania/Browser/X3DBrowserEditor.h" Line="108" Column="45" />
+      <File FileName="Titania/Titania/Browser/X3DBrowserWidget.h" Line="100" Column="1" />
+      <File FileName="Titania/Titania/Browser/BrowserWindow.h" Line="181" Column="1" />
+      <File FileName="Titania/Titania/Browser/BrowserWindow.cpp" Line="598" Column="4" />
+      <File FileName="Titania/Titania/Dialogs/FileSaveDialog/FileSaveDialog.h" Line="70" Column="28" />
+      <File FileName="Titania/Titania/Dialogs/FileSaveDialog/FileSaveDialog.cpp" Line="102" Column="1" />
+      <File FileName="Titania/Titania/Browser/X3DBrowserEditor.cpp" Line="505" Column="1" />
+      <File FileName="Titania/Titania/Browser/X3DBrowserWidget.cpp" Line="594" Column="28" />
     </Files>
     <Pads>
       <Pad Id="ProjectPad">
-        <State expanded="True">
+        <State expanded="True" selected="True">
           <Node name="build" expanded="True">
             <Node name="debian" expanded="True" />
           </Node>
@@ -28,9 +36,7 @@
                   <Node name="Navigation" expanded="True" />
                   <Node name="Networking" expanded="True" />
                   <Node name="ParticleSystems" expanded="True" />
-                  <Node name="PointingDeviceSensor" expanded="True">
-                    <Node name="PointingDevice.cpp" selected="True" />
-                  </Node>
+                  <Node name="PointingDeviceSensor" expanded="True" />
                   <Node name="Scripting" expanded="True" />
                   <Node name="Shape" expanded="True" />
                   <Node name="Text" expanded="True" />
@@ -57,6 +63,13 @@
                   </Node>
                 </Node>
               </Node>
+            </Node>
+            <Node name="Titania" expanded="True">
+              <Node name="Browser" expanded="True" />
+              <Node name="Dialogs" expanded="True">
+                <Node name="FileSaveDialog" expanded="True" />
+              </Node>
+              <Node name="Undo" expanded="True" />
             </Node>
           </Node>
           <Node name="x3dtidy" expanded="True">
