@@ -818,7 +818,7 @@ X3DBaseNode::addClones (const size_t count)
 {
 	if (count == 0)
 		return;
-	
+
 	cloneCount += count;
 
 	// Works, but the assumption that the scene graph changes when the clone count changeds is not fully correct as shared node are not handled.
@@ -834,7 +834,7 @@ X3DBaseNode::removeClones (const size_t count)
 {
 	if (count == 0)
 		return;
-	
+
 	cloneCount -= count;
 
 	// Works, but the assumption that the scene graph changes when the clone count changeds is not fully correct as shared node are not handled.
